# plan-marshall

./: .emit-marker.json  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.adoc  README.md  SECURITY.md  agents.md  build.py  dist-manifest.json  opencode.json  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: build-fix-commit.md  sync-plugin-cache.md  verify-plan.md  verify-workflow.md
.github/: SECURITY.md  dependabot.yml  project.yml
.github/ISSUE_TEMPLATE/: commercial-licensing.yml  config.yml
.github/workflows/: claude-distribute.yml  opencode-generate-check.yml  python-verify.yml
.plan/: marshal.json
.plan/project-architecture/: _project.json  derived-data.json  llm-enriched.json
agent/: execution-context-level-1.md  execution-context-level-2.md  execution-context-level-3.md  execution-context-level-4.md  execution-context-level-5.md  execution-context-level-6.md  execution-context-level-7.md  execution-context-reader-level-1.md  execution-context-reader-level-2.md  execution-context-reader-level-3.md  execution-context-reader-level-4.md  execution-context-reader-level-5.md  execution-context-reader-level-6.md  execution-context-reader-level-7.md  execution-context-reader.md  execution-context.md
command/: plan-marshall-automatic-review.md  plan-marshall-manage-build-server.md  plan-marshall-marshall-orchestrator.md  plan-marshall-marshall-steward.md  plan-marshall-plan-doctor.md  plan-marshall-plan-marshall.md  plan-marshall-plan-retrospective.md  plan-marshall-tools-permission-doctor.md  plan-marshall-tools-permission-fix.md  plan-marshall-workflow-permission-web.md  plan-marshall-workflow-pr-doctor.md  pm-plugin-development-plugin-apply-lessons-learned.md  pm-plugin-development-plugin-create.md  pm-plugin-development-plugin-doctor.md  pm-plugin-development-plugin-maintain.md  tools-fix-intellij-diagnostics.md  tools-sync-agents-file.md
doc/: build-structure.adoc  build-system.adoc  distribution.md  effort-variants.adoc  execution-context-overview.adoc  review-26-07-04.md  role-variants.adoc  usage.adoc  user-configuration.adoc  workflow-verification.adoc
doc/adr/: 001-Skills_are_the_source_of_truth_for_script_calls_drift_detection_is_dev-time_post-hoc.adoc  002-Plan-scoped_operations_move_into_a_cwd-pinned_hermetic_worktree.adoc  003-Reader_isolation_as_a_tool-surface_lever.adoc  004-The_file-to-build_contract_is_owned_by_build-system_extensions_not_languagecontent_domains.adoc  005-Growing-catalogue_artifacts_use_a_query_substrate_not_the_boot_skill-index.adoc  006-Generated-tree_drift_is_gated_at_the_consume_boundary_not_in_CI.adoc  007-The_survivor-sweep_invariant_covers_cross-file_stale_references_after_a_source_deletion.adoc  008-Machine-global_home-root_anchor_tier.adoc  009-Status_reporting_fails_closed_with_an_explicit_unknown_state.adoc  010-Domain_content_is_active_only_when_its_domain_is_active.adoc  011-The_waiting_capability_is_a_hybrid_target-neutral_policy_over_a_declinable_runtime_primitive.adoc
doc/analysis/: test-fixture-bootstrapping-inventory.md  test-fixture-unification-proposal.md  test-suite-redundancy-report.md  test-suite-remediation-map.md  uncompressed-output-measurement.md
doc/concepts/: README.adoc  architecture.adoc  audit-trail.adoc  automatic-reviews.adoc  branches-and-worktrees.adoc  build-management.adoc  build-server.adoc  design-influences.adoc  effort-and-models.adoc  execution-context.adoc  extension-architecture.adoc  index.adoc  orchestration.adoc  parallelism-and-locking.adoc  personas.adoc  planning-workflow.adoc  process-enforcement.adoc  recipes.adoc  security.adoc  simplification.adoc  skill-handling.adoc  token-management.adoc  tools-and-scripts.adoc  verification.adoc
doc/developer/: README.adoc  build-architecture.adoc  build.adoc  distribution.adoc  execution-context-boundary.adoc  index.adoc  manual-sync-recovery.adoc  marketplace-build.adoc  measurement-protocol.adoc  repository-layout.adoc  testing.adoc  why-this-license.adoc  workflow-verification.adoc
doc/next/: 01-personas.md  01-routing-v2.md  02-audit-recipes.md  02-auditor-preference-learning.md  03-audit-recipes.md  03-security-finalize-step.md  04-preference-learning-hints.md  04-routing-v2.md  05-live-verification-integrate.md  05-security-finalize-step.md  05-surface-encoded-verification.md  06-personas.md  06-surface-encoded-verification.md  README.md  principles.md
doc/refactor/: 01-finish-portability.md  02-validate-opencode-runtime.md  02-verification-protocol.md  03-distribution-opencode-target.md  04-developer-workflow-sync-opencode.md  05-opencode-documentation.md  06-execution-context-cross-target.md  07-target-extensibility.md  08-claude-coupling-inventory.md  README.md  principles.md
doc/user/: README.adoc  commands.adoc  configuration.adoc  efforts.adoc  enforcement-hook.adoc  getting-started.adoc  index.adoc  installation.adoc  parallelism-and-locking.adoc  recipes.adoc  terminal-title.adoc  windows-wsl-setup.adoc
marketplace/.claude-plugin/: marketplace.json
marketplace/adapters/: __init__.py  adapter_base.py  generate.py  opencode_adapter.py
marketplace/targets/: README.md  __init__.py  base.py  body_transform_engine.py  generate.py
plan-marshall/: README.md
plan-marshall/.claude-plugin/: plugin.json
plan-marshall/agents/: execution-context-level-1.md  execution-context-level-2.md  execution-context-level-3.md  execution-context-level-4.md  execution-context-level-5.md  execution-context-level-6.md  execution-context-level-7.md  execution-context-reader-level-1.md  execution-context-reader-level-2.md  execution-context-reader-level-3.md  execution-context-reader-level-4.md  execution-context-reader-level-5.md  execution-context-reader-level-6.md  execution-context-reader-level-7.md  execution-context-reader.md  execution-context.md
plan-marshall/commands/: tools-sync-agents-file.md  (+1 more)
pm-dev-frontend/: README.md
pm-dev-java-cui/: README.md
pm-documents/: README.md
pm-plugin-development/: README.md
test/: conftest.py  run-tests.py  test_conftest_discipline.py
(+3999 files in other folders)
