[project]
name = "plan-marshall"
version = "0.1.0"
requires-python = ">=3.12"

# =============================================================================
# Pyprojectx Configuration
# =============================================================================

[tool.pyprojectx]
# Lock to specific Python version for consistency
lock-python-version = "3.12"

[tool.pyprojectx.main]
# Dev tools to install
requirements = [
    "uv",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pyprojectx.aliases]
# Dependency management
install = "uv sync"
lock = "uv lock"
add = "uv add"

# Build commands with module filtering (canonical commands from extension_base.py)
# Usage: ./pw <command> [module]
# Examples:
#   ./pw compile                    # All bundles
#   ./pw compile pm-dev-frontend    # Single bundle
#   ./pw module-tests pm-workflow   # Single test directory
build = "uv run python build.py"
compile = "uv run python build.py compile"
test-compile = "uv run python build.py test-compile"
module-tests = "uv run python build.py module-tests"
quality-gate = "uv run python build.py quality-gate"
coverage = "uv run python build.py coverage"
verify = "uv run python build.py verify"
clean = "uv run python build.py clean"

# Shortcuts for common operations (no module filtering)
lint = "ruff check marketplace/bundles/ test/"
lint-fix = "ruff check marketplace/bundles/ test/ --fix"
fmt = "ruff format marketplace/bundles/ test/"
format = "ruff format marketplace/bundles/ test/"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["fixtures", "__pycache__", ".git"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["marketplace/bundles"]
branch = true
omit = ["*/scripts/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["marketplace/bundles", "test"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["B011"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
# Exclude extension.py files in plan-marshall-plugin directories - they are dynamically loaded
# and mypy can't distinguish them by path (all named "extension")
# Also exclude test/*/plan-marshall-plugin/ directories - invalid Python package name (contains dashes)
# Also exclude duplicate test files/directories (same basenames cause mypy module conflicts)
exclude = [
    "plan-marshall-plugin/extension\\.py$",
    "test/.*/plan-marshall-plugin/",
    "test/plan-marshall/permission-fix/test_permission\\.py$",
    "test/pm-dev-java/plan-marshall-plugin/test_discover_modules\\.py$",
    "test/pm-plugin-development/plugin-doctor/test_extension\\.py$",
    "test/.*/integration/",
]
