[project]
name = "plan-marshall"
version = "0.1.0"
requires-python = ">=3.12"

# =============================================================================
# Pyprojectx Configuration
# =============================================================================

[tool.pyprojectx]
# Lock to specific Python version for consistency
lock-python-version = "3.12"

[tool.pyprojectx.main]
# Dev tools to install
requirements = [
    "uv",
    # Pinned below the 9.x major for the same reason as mypy below: adding an
    # unrelated dev tool re-resolves this env, and pytest 9 + xdist 3.8 on the CI
    # Python crashes xdist workers ("node down: Not properly terminated") on
    # pre-existing tests. Adopting pytest 9 is a deliberate migration, not a
    # transitive consequence of a plugin bump.
    "pytest>=8.0,<9",
    "pytest-cov>=4.0",
    # Capped below 3.8: the floated 3.8.0 crashes workers ("node down: Not
    # properly terminated") and then its loadscope scheduler internal-errors
    # (KeyError <WorkerController>) aborting the whole session. Same major-cap
    # rationale as mypy/pytest above.
    "pytest-xdist>=3.0,<3.8",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    # Pinned below the 2.x major: the quality gate must not float the type-checker
    # across a major version as a side effect of adding an unrelated dev tool
    # (adding pytest-timeout re-resolves this env). mypy 2.x is stricter and
    # surfaces pre-existing latent findings across the tree; adopting it is a
    # deliberate project-level decision, not a transitive consequence of a plugin
    # bump. Raise this ceiling in a dedicated mypy-2.x migration.
    "mypy>=1.10,<2",
]

[tool.pyprojectx.aliases]
# Dependency management
install = "uv sync"
lock = "uv lock"
add = "uv add"

# Build commands with module filtering (canonical commands from extension_base.py)
# Usage: ./pw <command> [module]
# Examples:
#   ./pw compile                    # All bundles
#   ./pw compile pm-dev-frontend    # Single bundle
#   ./pw module-tests plan-marshall   # Single test directory
build = "uv run python build.py"
compile = "uv run python build.py compile"
test-compile = "uv run python build.py test-compile"
module-tests = "uv run python build.py module-tests"
quality-gate = "uv run python build.py quality-gate"
coverage = "uv run python build.py coverage"
verify = "uv run python build.py verify"
clean = "uv run python build.py clean"

# Shortcuts for common operations (no module filtering)
lint = "ruff check marketplace/bundles/ test/ .claude/"
lint-fix = "ruff check marketplace/bundles/ test/ .claude/ --fix"
fmt = "ruff format marketplace/bundles/ test/ .claude/"
format = "ruff format marketplace/bundles/ test/ .claude/"

# Multi-target generator (Claude Code, OpenCode, …) — see marketplace/targets/.
generate = "uv run python marketplace/targets/generate.py"
generate-claude = "uv run python marketplace/targets/generate.py --target claude"
generate-opencode = "uv run python marketplace/targets/generate.py --target opencode"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["test"]
# Project root on pythonpath so ``marketplace.targets.*`` (the multi-target
# generator package) imports cleanly during pytest collection.
pythonpath = [".", "test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["fixtures", "__pycache__", ".git"]
addopts = ["-v", "--tb=short", "--strict-markers", "--strict-config", "--durations=25"]
# Every warning is an error. Armed on a measured census, not on optimism: a full
# whole-tree run of all 14794 tests under the flags above emits ZERO warnings —
# no warnings-summary section at all, in any category, from third-party or
# project-owned code. With an empty census the gate costs nothing today and
# turns the *next* warning introduced into an attributable failure at the commit
# that introduces it, rather than letting it accumulate silently. No per-item
# ignore entry is warranted, because there is no warning to ignore; if one
# becomes necessary later it belongs here in the narrowly-scoped
# ``ignore:{message-prefix}:{Category}:{module}`` form, never as a bare
# ``ignore::SomeWarning``.
filterwarnings = ["error"]
# Fail (with a traceback at the hang point) instead of wedging a worker forever.
# The whole suite runs in ~2.5 min (measured 151.69s, warm cache) under ``-n
# auto`` — 10 xdist workers on the measuring host — and the slowest single test
# in the ``--durations=25`` table is ~13s. The rationale still holds, and by a
# wider margin than when it was written: 300s is more than an order of magnitude
# past the slowest observed test and more than the whole suite's wall-clock, so
# any single test that runs longer than that is hung, not slow — surface it as
# an attributable failure with a stack rather than an opaque job timeout. The
# threshold is deliberately NOT retightened toward the measured maximum: it is a
# hang detector, not a performance budget, and slack absorbs a slower CI host
# without turning a slow-but-healthy test into a false failure. The default signal
# method (SIGALRM on each worker's main thread, where xdist runs its tests) is
# used deliberately: the thread method's watchdog leaves the worker in an
# unclean state on teardown under xdist.
timeout = 300
# Custom-marker registry — the SINGLE source of truth for every non-built-in
# ``@pytest.mark.<name>`` in the suite. Declared here rather than through
# ``config.addinivalue_line`` in ``test/conftest.py::pytest_configure`` so the
# registry is data, not code, and so enabling ``--strict-markers`` later needs
# no relocation. A whole-tree sweep of ``@pytest.mark.<name>`` confirms these
# two are the complete set of custom markers in use.
markers = [
    # ``allow_pollution`` is a DELIBERATE ESCAPE HATCH, retained by design: it
    # is the single opt-out a test uses when it must exercise the real
    # credentials path or the real tracked ``.plan/`` tree instead of the
    # per-test sandboxes. Three autouse fixtures honour it
    # (``_pollution_guard``, ``_plan_base_dir_sandbox``,
    # ``_credentials_dir_sandbox``), so it is intentionally NOT a candidate for
    # removal — a real-tree test has no other way to reach the genuine
    # resolvers.
    "allow_pollution: test may legitimately mutate the real ~/.plan-marshall/credentials/ directory or the tracked .plan/ tree (opts out of the autouse PLAN_BASE_DIR and CREDENTIALS_DIR sandboxes and the pollution guard).",
    "xdist_group(name): pin all tests sharing the same group name to a single xdist worker (requires --dist=loadgroup).",
]

[tool.coverage.run]
source = ["marketplace/bundles"]
branch = true
omit = [
    "*/scripts/__pycache__/*",
    "test/*",
    "*/test_*.py",
    "**/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["marketplace/bundles", "test", ".claude"]
# Parallel worktrees under ``.claude/worktrees/`` are isolated working copies
# of other in-flight branches. They contribute neither to this branch's tree
# nor to its lint scope; mirror the mypy exclude here so ruff doesn't flag
# unrelated work-in-progress code as drift against this branch.
extend-exclude = [".claude/worktrees/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["marketplace"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# Cross-skill modules are imported by flat name (`from file_ops import ...`) and
# resolved through MYPYPATH, which build.py:_compute_mypypath() derives from the
# same collect_script_dirs() source of truth as the runtime PYTHONPATH. Because
# every by-name import resolves, missing-import silencing is not merely
# unnecessary — it is harmful: it would let a renamed or deleted shared module
# pass static analysis while breaking by-name resolution at runtime. Keeping this
# false makes an unresolvable shared import a hard [import-not-found] error, so a
# rename that misses a call site is caught at compile time.
ignore_missing_imports = false
# Fail on any `# type: ignore` that no longer suppresses a real diagnostic. This
# is what keeps the flat-import boundaries honest: an import-silencing ignore
# cannot be reintroduced without mypy flagging it the moment the underlying
# import resolves.
warn_unused_ignores = true
explicit_package_bases = true
# MYPYPATH is injected at runtime by build.py:_compute_mypypath() via the
# MYPYPATH env var, derived from collect_script_dirs(). Do NOT re-add entries
# for skill scripts/ dirs or their immediate subdirs — they are covered there.
# This list is reserved for entries OUTSIDE that derivation.
#
# ``test/_shared`` is the bundle-neutral home for cross-bundle test helpers that
# every bundle bare-imports (``test/conftest.py`` puts it on ``sys.path`` at
# runtime). Under ``explicit_package_bases`` mypy derives top-level module names
# only from the current directory and ``mypy_path`` entries, so without this
# entry the helper resolves as ``test._shared.<module>`` and every bare importer
# fails with ``[import-not-found]``. The hyphenated ``test/<bundle>/`` dirs need
# no entry: a hyphen is not a valid identifier, so mypy's package-base crawl
# already stops there and yields the bare module name.
mypy_path = ["test/_shared"]
# Exclude extension.py files - they are dynamically loaded via importlib and mypy
# can't distinguish them by path (all named "extension"). This covers both the
# language-domain extensions (plan-marshall-plugin/extension.py) and the
# build-system-owned BuildExtensionBase subclasses (build-*/scripts/extension.py).
# Also exclude test/*/plan-marshall-plugin/ directories - invalid Python package name (contains dashes)
# The same dash-in-package-name limitation applies to every hyphenated test dir
# that carries an __init__.py (present to disambiguate pytest test-file basename
# collisions under the default prepend import mode). Under explicit_package_bases
# mypy derives the package name from the dir name, so a hyphen makes it "not a
# valid Python package name" (exit 2) regardless of mypy version. ./pw verify
# never mypy-checks test/ (cmd_quality_gate compiles only marketplace/bundles),
# so test-compile is the sole surface these break — enumerate them here.
exclude = [
    "plan-marshall-plugin/extension\\.py$",
    "skills/[^/]*/scripts/extension\\.py$",
    "test/.*/plan-marshall-plugin/",
    "test/plan-marshall/tools-permission-fix/test_permission\\.py$",
    "test/.*/integration/",
    "test/finalize-step-deploy-target/",
    "test/finalize-step-sync-plugin-cache/",
    "test/sync-plugin-cache/",
    "test/pm-documents/ref-ascii-diagrams/",
    "test/plan-marshall/audit-archived-plan-retrospectives/",
    "test/plan-marshall/execute-task/",
    "test/plan-marshall/finalize-step-review-retrospective/",
    "test/plan-marshall/finalize-step-sync-baseline/",
    "test/plan-marshall/manage-personas/",
    "test/plan-marshall/phase-4-plan/",
    "test/plan-marshall/plan-retrospective/",
    "\\.claude/worktrees/",
]

# The only genuinely third-party imports in the tree ship no type information
# (PyYAML's `yaml`, the `tomli` TOML reader). Scope missing-import tolerance to
# exactly these modules so the global `ignore_missing_imports = false` continues
# to catch every unresolved cross-skill import.
[[tool.mypy.overrides]]
module = ["yaml", "tomli"]
ignore_missing_imports = true

# `conftest` is pytest's per-directory fixture module: pytest inserts each test
# directory onto sys.path at collection time so `from conftest import ...` resolves
# at RUNTIME, but that dir is not on mypy's MYPYPATH (and several sibling conftest
# modules share the name, so it cannot be). Scope missing-import tolerance to
# exactly `conftest` so test-compile (mypy over test/) does not choke on the
# fixture import while the global `ignore_missing_imports = false` still catches
# every real cross-skill import. Only test code imports conftest, so this cannot
# mask a production import regression.
[[tool.mypy.overrides]]
module = ["conftest"]
ignore_missing_imports = true
